--- a/css/main.css
+++ b/css/main.css
@@ -97,43 +97,54 @@ textarea {
 
 /*Large Background Image*/
 html {
-    background: url(../img/bkgd2.jpg) no-repeat center center fixed;
-    background-size: cover;
-    height: 100;/* set height to 100% - these are important for allowing content to vertically align */
+  background: url(../img/xps-bXfQLglc81U-unsplash.jpg) no-repeat center center fixed;
+  height: 100%;/* set height to 100% - these are important for allowing content to vertically align */
+  background: ;
+  background-size: cover;
 }
 
 body {
-   height: 100%; /* set height to 100% - these are important for allowing content to vertically align */
+  height: 100%;/* set height to 100% - these are important for allowing content to vertically align */
 }
 
 .wrapper {
-    justify-content: center;
-    align-items: center;/* set the display to flex and use the justify-content & align-items properties to center all child elements on the page */
-    margin: 0;
-    height: 100%;
-    width: 100%;
-    display: flex;
+  /* set the display to flex and use the justify-content & align-items properties to center all child elements on the page */
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 #content {
-    display: flex;
-    justify-content: center;
-    align-items: center;/* set the display to flex and use the justify-content & align-items properties to center the text within the div*/
+  /* set the display to flex and use the justify-content & align-items properties to center the text within the div*/
+  background: #222;
+  background:rgba(0,0,0,0.7);
+  color: #fff;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300;
+  font-size: 1.25em;
+  line-height: 1.5em;
+  border-radius: 10px;
+  padding: 0px 30px;
+  width: 300px;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#contact {
     background: #222;
     background:rgba(0,0,0,0.7);
     color: #fff;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-weight: 300;
-    font-size: 1.25em;
-    line-height: 1.5em;
-    border-radius: 10px;
-    padding: 0px 30px;
-    width: 300px;
-    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #content p span {
-    font-family: 'Lora', sans-serif;
+  font-family: 'Lora', sans-serif;
 }
 
 
